--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -70,7 +70,7 @@ td div {
   bottom: 0;
   left: 0;
   right: 0;
-  background: transparent;
+  background: blue;
   border-radius: 5px;
   text-align: center;
   font-size: 0em;
