--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -18,7 +18,6 @@
   margin: auto;
 }
 #screen {
-  background: black;
   position: fixed;
   display: block;
   height: 136px;
@@ -28,13 +27,14 @@
   font-size: 0.8em;
   margin: auto;
   font-family: andale mono, monospace;
+  font-weight: bold;
   color: turquoise;
   text-align: center;
   white-space: pre-line;
   left: 0;
   right: 0;
   margin-inline: auto;
-  z-index: 1;
+
 }
 .spacer2 {
   display: block;
@@ -44,12 +44,11 @@
 .triggerpad {
   position: fixed;
   width: 100%;
-  z-index: 2;
 }
 table {
   position: relative;
   width: 360px;
-  height: 330px;
+  height: 335px;
   table-layout: fixed;
   margin-top: 0;
   margin-bottom: 0;
@@ -64,32 +63,35 @@ td:after {
   content: "";
   display: block;
 }
-td div {
+button {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   background: transparent;
-  border-radius: 5px;
+  border-radius: 3px;
+  border-color: transparent;
   text-align: center;
   font-size: 0em;
   width: 88px;
   height: 88px;
-  margin-left: 8px;
+  margin-left: 6.5px;
 }
 audio {
-  display: none;
+display: none;
 }
 input {
   display: none;
 }
-div {
-  font-weight: 700;
+.trigger {
+            cursor: pointer; 
 }
-input[type="file"] {
-  display: none;
-}
+.trigger:hover {
+            background-color: black;
+            opacity: 10%;
+        }
 * {
   font-family: andale mono, monospace;
 }
+
