--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -1,3 +1,11 @@
+video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index:-100;
+}
 .container {
   max-width: 960px;
   margin: 0 auto;
