--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -1,7 +1,6 @@
 video {
-  position: absolute;
-  top: 0;
-  left: 0;
+  margin: 0 auto;
+  position: fixed;
   min-width: 100%;
   min-height: 100%;
   z-index:-100;
