--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -14,11 +14,8 @@ video {
 }
 .container {
   max-width: 960px;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  margin: 3% auto;
+  position: fixed;
 }
 /* css for svg sampler skin */
 #samplerskin {
