--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -36,16 +36,15 @@ video {
   margin-inline: auto;
 }
 .spacer1 {
-  height: 129px;
+  height: 20%;
   display: block;
   margin: auto;
 }
 #screen {
   position: absolute;
   display: block;
-  height: 136px;
-  width: 394px;
-  max-width: 394px;
+  height: 20%;
+  width: 72%;
   font-size: 0.8em;
   margin: auto;
   font-family: andale mono, monospace;
@@ -60,7 +59,7 @@ video {
 }
 .spacer2 {
   display: block;
-  height: 219px;
+  height: 10%;
   margin: auto;
 }
 .triggerpad {
