--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -22,29 +22,29 @@ video {
   z-index: -100; /* Keeps the video in the background */
 }
 .container {
-  position: relative; /* Relative positioning for absolute alignment */
-  width: 550px; /* Match sampler skin width */
-  height: auto; /* Let the height adapt */
-  margin: 0 auto; /* Center on the page */
+  max-width: 550px;
+  margin: 3% auto;
+  position: fixed;
 }
 /* css for svg sampler skin */
 #samplerskin {
-  width: 100%;
-  position: relative;
+  max-width: 100%;
+  position: fixed;
   left: 0;
   right: 0;
   margin-inline: auto;
 }
 .spacer1 {
-  height: 20%;
+  height: 129px;
   display: block;
   margin: auto;
 }
 #screen {
-  position: absolute;
+  position: fixed;
   display: block;
-  height: 20%;
-  width: 72%;
+  height: 136px;
+  width: 394px;
+  max-width: 394px;
   font-size: 0.8em;
   margin: auto;
   font-family: andale mono, monospace;
@@ -59,20 +59,12 @@ video {
 }
 .spacer2 {
   display: block;
-  height: 10%;
+  height: 219px;
   margin: auto;
 }
 .triggerpad {
-  position: absolute;
+  position: fixed;
   width: 100%;
-  top: 0; /* Start at the top of the sampler skin */
-  left: 0;
-  width: 100%; /* Match sampler skin width */
-  height: 100%; /* Match sampler skin height */
-  display: flex; /* Use flexbox for alignment */
-  flex-wrap: wrap; /* Allow multiple rows if needed */
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
 }
 table {
   position: relative;
