--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -28,7 +28,7 @@ video {
 }
 /* css for svg sampler skin */
 #samplerskin {
-  max-width: 100%;
+  width: 100%;
   position: fixed;
   left: 0;
   right: 0;
