--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -24,7 +24,7 @@ video {
 .container {
   max-width: 550px;
   margin: 3% auto;
-  position: fixed;
+  position: relative;
 }
 /* css for svg sampler skin */
 #samplerskin {
