--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -23,8 +23,9 @@ video {
 }
 .container {
   width: 550px;
-  margin: 3% auto;
   position: relative;
+  height: auto; /* Let the height adapt */
+  margin: 0 auto; /* Center on the page */
 }
 /* css for svg sampler skin */
 #samplerskin {
