--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -30,7 +30,7 @@ video {
 /* css for svg sampler skin */
 #samplerskin {
   width: 100%;
-  position: fixed;
+  position: relative;
   left: 0;
   right: 0;
   margin-inline: auto;
