--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -41,7 +41,7 @@ video {
   margin: auto;
 }
 #screen {
-  position: fixed;
+  position: absolute;
   display: block;
   height: 136px;
   width: 394px;
