--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -42,7 +42,7 @@ video {
   position: absolute;
   top: 18%;
   width: 72%;
-  font-size: clamp(0.5em, 1.6vw, 1em);
+  font-size: clamp(0.5em, 1.4vw, 1em);
   margin: auto;
   font-family: andale mono, monospace;
   font-weight: bold;
@@ -172,7 +172,7 @@ input {
   }
   
   .container {
-    width: 400px;
+    width: 90%;
   }
   
   button {
