--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -42,7 +42,7 @@ video {
   position: absolute;
   top: 18%;
   width: 72%;
-  font-size: 0.6em;
+  font-size: clamp(0.5em, 2vw, 1em);
   margin: auto;
   font-family: andale mono, monospace;
   font-weight: bold;
