--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -42,7 +42,7 @@ video {
   position: absolute;
   top: 18%;
   width: 72%;
-  font-size: clamp(0.4em, 1.5vw, 1em);
+  font-size: 0.7em;
   margin: auto;
   font-family: andale mono, monospace;
   font-weight: bold;
