--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -170,6 +170,12 @@ input {
   #screen {
     font-size: 0.3em;
   }
+
+  #button1, #button2, #button3, #button4, #button5, #button6, #button7, #button8, #button9 {
+        width: 100%; /* Full width for smaller screens */
+        height: auto;
+        margin-bottom: 10px; /* Add spacing */
+    }
   
   .container {
     width: 100%;
