--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -173,8 +173,7 @@ input {
 
   #button1, #button2, #button3, #button4, #button5, #button6, #button7, #button8, #button9 {
         width: 100%; /* Full width for smaller screens */
-        height: auto;
-        margin-bottom: 10px; /* Add spacing */
+        height: 100%;
     }
   
   .container {
