--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -42,7 +42,7 @@ video {
   position: absolute;
   top: 18%;
   width: 72%;
-  font-size: clamp(0.8125rem, 0.8125rem + 0vw, 0.8125rem);
+  font-size: 13px;
   margin: auto;
   font-family: andale mono, monospace;
   font-weight: bold;
@@ -173,7 +173,7 @@ input {
 
   #button1, #button2, #button3, #button4, #button5, #button6, #button7, #button8, #button9 {
         width: 25%; /* Full width for smaller screens */
-        height: 125%;
+        height: 25%;
     }
   
   .container {
