--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -168,11 +168,11 @@ input {
 
 @media screen and (max-width: 480px) {
   #screen {
-    font-size: 0.1em;
+    font-size: 7px;
   }
 
   #button1, #button2, #button3, #button4, #button5, #button6, #button7, #button8, #button9 {
-        width: 25%; /* Full width for smaller screens */
+        width: 20%; /* Full width for smaller screens */
     }
   
   .container {
