--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -28,6 +28,7 @@ video {
   position: relative;
   height: auto; /* Let the height adapt */
   margin: 5% auto; /* Center on the page */
+  aspect-ratio: 1 / 1;
 }
 /* css for svg sampler skin */
 #samplerskin {
