--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -1,16 +1,10 @@
-/* General Reset */
-* {
-  font-family: andale mono, monospace;
-  font-weight: bold;
-}
-html,
-body {
+html, body {
   margin: 0; /* Remove default margin */
   padding: 0; /* Remove default padding */
-  height: 100%;
-  width: 100%;
+  height: 100%; 
+  width: 100%; 
 }
-video {
+video{
   position: fixed;
   right: 0;
   left: 0;
@@ -18,14 +12,10 @@ video {
   bottom: 0;
   min-width: 100vw;
   min-height: 100vh;
-  z-index: -100;
+  z-index:-100;
 }
-@media only screen and (max-width: 1080px){
-  svg {
-    height: 80vh;
-  }
 svg {
-  height: clamp(500px, 100vh, 1000px);
+  height: 100vh; 
   width: auto;
   display: block;
   margin-left: auto;
@@ -33,12 +23,17 @@ svg {
   padding-top: 6vh;
   padding-bottom: 6vh;
 }
+@media only screen and (max-width: 1080px){
+  svg {
+    height: 80vh;
+  }
+}
 .trigger {
-  cursor: pointer;
+            cursor: pointer; 
 }
 .trigger:hover {
-  fill: #bc3c4c;
-  opacity: 70%;
+            fill: #111CCB;
+            opacity: 60%;
 }
 p {
   font-family: Helvetica, Arial, sans-serif;
@@ -47,14 +42,11 @@ p {
   padding-right: 10%;
   padding-top: 10vh;
   color: white;
-  overflow-wrap: break-word;
-  text-wrap: pretty;
 }
-#mySidebar {
-  width: 22%;
-  height: 100%;
-  right: 0;
-  background: rgba(0, 0, 0, 0.6);
-  position: absolute;
+#mySidebar {  
+width: 22%; 
+height: 100%; 
+right:0; 
+background: rgba(0, 0, 0, .6); 
+position: absolute;
 }
-
