--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -50,3 +50,8 @@ right:0;
 background: rgba(0, 0, 0, .6); 
 position: absolute;
 }
+@media only screen and (max-width: 600px) {
+  #mySidebar {
+    display: none;
+  }
+}
