--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -37,7 +37,7 @@ svg {
 }
 p {
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 0.95em;
+  font-size: 1vw;
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 6vh;
